[tool.poetry]
name = "deltatest"
version = "0.1.0"
description = ""
authors = ["Jan Wedekind <jan.wedekind@roke.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "3.2.2"
ptpython = "^3.0.20"
delta-spark = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
